--- a/docs/css/kolibri-base.css
+++ b/docs/css/kolibri-base.css
@@ -37,7 +37,8 @@ h1, h2, h3 {
 div, p, ul, ol, dl,
 form, fieldset, label, input, button {
     font-family: var(--kb-font-family-running-text),var(--kb-font-family-default), system-ui;
-    letter-spacing: 0.02em;
+    letter-spacing: 0.03em;
+    font-weight:    300;
 }
 /* --- end typography --- */
 
