after rebase onto design-system-engineering branch, remove the not-yet-finished kolibriButton.

--- a/docs/src/examples/layeredStyle/LayeredStyle.css
+++ b/docs/src/examples/layeredStyle/LayeredStyle.css
@@ -5,16 +5,12 @@
       use no layers at all.
 */
 
-@layer example-application, kolibri-light-colors, kolibri-light-fonts, kolibri-base;
+@layer example-application, kolibri-base;
 
 /* note: some tools issue a warning here that imports should be at the top.
    This is not true for the @layer syntax.
    It also must be in this sequence or it won't work.
  */
-/*noinspection CssInvalidImport*/
-@import "../../../css/kolibri-light-colors.css" layer(kolibri-light-colors);
-/*noinspection CssInvalidImport*/
-@import "../../../css/kolibri-light-fonts.css"  layer(kolibri-light-fonts);
 /*noinspection CssInvalidImport*/
 @import "../../../css/kolibri-base.css"         layer(kolibri-base);
 
