--- a/docs/font/typography-template.css
+++ b/docs/font/typography-template.css
@@ -1,32 +1,151 @@
 body {
     --slider-fill: 25%; font-family: var(--Typescale-Fontfamily-heading, Saira);
-    & h1 { margin: 0px; color: var(--Kolibri-Light-Monochrome---kb-color-black, #14141B); font-size: var(--Typescale-Fontsize-1, 6rem); font-weight: 300; letter-spacing: -1px; }
-    & h3 { margin: 0px; color: var(--Kolibri-Light-Monochrome---kb-color-bg-dark, #262338); font-size: var(--Typescale-Lineheight-3, 2.8rem); font-weight: 400; line-height: var(--Typescale-Lineheight-3, 3.0rem); letter-spacing: -0.5px; }
-    & h5 { margin: 0px; color: var(--Kolibri-Light-Monochrome---kb-color-plachold, #A0A3BD); font-size: var(--Typescale-Lineheight-5, 1.1rem); font-weight: 500; line-height: var(--Typescale-Lineheight-5, 1.1rem); letter-spacing: 0.15px; }
-    & a { color: rgb(0, 115, 230); }
-    & p { color: var(--Kolibri-Light-Monochrome---kb-color-body, #4E4B66); font-size: var(--Typescale-Fontsize-1, 1.6rem); font-weight: 400; line-height: var(--Typescale-Lineheight-1, 2.4rem); letter-spacing: 0.75px; }
-    & label { color: var(--Kolibri-Light-Monochrome---kb-color-bg-dark, #262338); font-family: var(--Typescale-Fontfamily-heading, Saira); font-size: var(--Typescale-Fontsize-7, 1rem); font-weight: 500; line-height: var(--Typescale-Lineheight-7, 1.25rem); letter-spacing: 0.05rem; }
-    & input[type="range"] { appearance: none; width: 18rem; height: 0.8rem; border-radius: 50%; outline: none; position: relative; }
-    & input[type="range"]::-webkit-slider-runnable-track { border-radius: 1rem; height: 0.5rem; background: linear-gradient(to right, #6000FF var(--slider-fill), #EBECFE var(--slider-fill)); }
-    & input[type="range"]::-webkit-slider-thumb { appearance: none; margin-bottom: 0.8rem; width: 1.5rem; height: 1.5rem; position: relative; top: calc(-0.5rem); background: rgb(96, 0, 255); border-radius: 50%; cursor: pointer; border: 4px solid rgb(255, 255, 255); transition: transform 0.3s ease-in-out; box-shadow: rgba(134, 62, 255, 0.3) 0px 0px 16px, rgba(96, 0, 255, 0.4) 0px 0px 32px; animation: 1.5s ease-in-out 0s infinite normal none running pulseGlow; }
-    & input[type="range"]:hover::-webkit-slider-thumb { transform: scale(1.2); box-shadow: rgba(134, 62, 255, 0.4) 0px 0px 16px, rgba(96, 0, 255, 0.4) 0px 0px 32px; }
+
+    & h1 {
+        margin: 0px;
+        color: var(--Kolibri-Light-Monochrome---kb-color-black, #14141B);
+        font-size: var(--Typescale-Fontsize-1, 6rem);
+        font-weight: 300;
+        letter-spacing: -1px;
+    }
+
+    & h3 {
+        margin: 0px;
+        color: var(--Kolibri-Light-Monochrome---kb-color-bg-dark, #262338);
+        font-size: var(--Typescale-Lineheight-3, 2.8rem);
+        font-weight: 400;
+        line-height: var(--Typescale-Lineheight-3, 3.0rem);
+        letter-spacing: -0.5px;
+    }
+    & h5 {
+        margin: 0px;
+        color: var(--Kolibri-Light-Monochrome---kb-color-plachold, #A0A3BD);
+        font-size: var(--Typescale-Lineheight-5, 1.1rem);
+        font-weight: 500;
+        line-height: var(--Typescale-Lineheight-5, 1.1rem);
+        letter-spacing: 0.15px;
+    }
+    & a {
+        color: rgb(0, 115, 230);
+    }
+    & p {
+        color: var(--Kolibri-Light-Monochrome---kb-color-body, #4E4B66);
+        font-size: var(--Typescale-Fontsize-1, 1.6rem);
+        font-weight: 400;
+        line-height: var(--Typescale-Lineheight-1, 2.4rem);
+        letter-spacing: 0.75px;
+    }
+    & label {
+        color: var(--Kolibri-Light-Monochrome---kb-color-bg-dark, #262338);
+        font-family: var(--Typescale-Fontfamily-heading, Saira);
+        font-size: var(--Typescale-Fontsize-7, 1rem);
+        font-weight: 500;
+        line-height: var(--Typescale-Lineheight-7, 1.25rem);
+        letter-spacing: 0.05rem;
+    }
+    & input[type="range"] {
+        appearance: none;
+        width: 18rem;
+        height: 0.8rem;
+        border-radius: 50%;
+        outline: none;
+        position: relative;
+    }
+    & input[type="range"]::-webkit-slider-runnable-track {
+        border-radius: 1rem;
+        height: 0.5rem;
+        background: linear-gradient(to right, #6000FF var(--slider-fill), #EBECFE var(--slider-fill));
+    }
+    & input[type="range"]::-webkit-slider-thumb {
+        appearance: none;
+        margin-bottom: 0.8rem;
+        width: 1.5rem;
+        height: 1.5rem;
+        position: relative;
+        top: calc(-0.5rem);
+        background: rgb(96, 0, 255);
+        border-radius: 50%;
+        cursor: pointer;
+        border: 4px solid rgb(255, 255, 255);
+        transition: transform 0.3s ease-in-out;
+        box-shadow: rgba(134, 62, 255, 0.3) 0px 0px 16px, rgba(96, 0, 255, 0.4) 0px 0px 32px;
+        animation: 1.5s ease-in-out 0s infinite normal none running pulseGlow;
+    }
+    & input[type="range"]:hover::-webkit-slider-thumb {
+        transform: scale(1.2);
+        box-shadow: rgba(134, 62, 255, 0.4) 0px 0px 16px, rgba(96, 0, 255, 0.4) 0px 0px 32px; }
 }
 header {
-    display: flex; flex-direction: row; align-items: center; padding: 5rem; background: var(--Kolibri-Light-Monochrome---kb-color-bg-light, #F7F7FC); gap: 2.5rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 5rem;
+    background: var(--Kolibri-Light-Monochrome---kb-color-bg-light, #F7F7FC);
+    gap: 2.5rem;
     & .header-logo { max-height: 94px; }
-    & .header-title { display: flex; flex-direction: column; justify-content: space-around; }
+    & .header-title {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
 }
-main { display: flex; flex-direction: column; justify-content: center; align-items: center; padding: 4.5rem 5rem; margin: 0px auto; gap: 6.25rem; }
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 4.5rem 5rem;
+    margin: 0px auto;
+    gap: 6.25rem;
+}
 section {
-    display: flex; align-items: center; width: 100%; max-width: 100rem; gap: 5rem;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    max-width: 100rem;
+    gap: 5rem;
     & > * { }
     & > div:nth-child(1) { flex-grow: 2; flex-basis: 60rem; }
     & > div:nth-child(2) { flex-shrink: 1; flex-basis: 42rem; }
 }
-.intro { background: var(--Kolibri-Light-Monochrome---kb-color-bg-light, #F7F7FC); border-radius: 12px; padding: 10rem 6.25rem; }
-.intro-name h3 { color: var(--Kolibri-Light-Monochrome---kb-color-label, #6E7191); font-weight: 300; }
-.intro-sample { text-align: end; font-size: 8rem; font-weight: 600; font-family: var(--Typescale-Fontfamily-heading, Saira); color: var(--Kolibri-Light-Monochrome---kb-color-black, #14141B); }
-.usage-number { margin: 1.5rem 0px; display: flex; justify-content: flex-start; align-items: baseline; gap: 0.5rem; }
-.weight-input input[type="text"] { margin-top: 2.5rem; box-sizing: border-box; border-radius: 0.25rem; line-height: 4rem; text-indent: 1rem; width: 100%; border: 0.75px solid var(--Kolibri-Light-Monochrome---kb-color-plachold, #A0A3BD); font-family: var(--Typescale-Fontfamily-heading, Saira); font-size: var(--Typescale-Fontsize-6, 1.25rem); font-weight: 300; letter-spacing: 0.1rem; }
-.weight-slider { align-self: flex-end; margin-bottom: 1.25rem; }
+.intro {
+    background: var(--Kolibri-Light-Monochrome---kb-color-bg-light, #F7F7FC);
+    border-radius: 12px;
+    padding: 10rem 6.25rem;
+}
+.intro-name h3 {
+    color: var(--Kolibri-Light-Monochrome---kb-color-label, #6E7191);
+    font-weight: 300;
+}
+.intro-sample {
+    text-align: end;
+    font-size: 8rem;
+    font-weight: 600;
+    font-family: var(--Typescale-Fontfamily-heading, Saira);
+    color: var(--Kolibri-Light-Monochrome---kb-color-black, #14141B);
+}
+.usage-number {
+    margin: 1.5rem 0px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: baseline;
+    gap: 0.5rem;
+}
+.weight-input input[type="text"] {
+    margin-top: 2.5rem;
+    box-sizing: border-box;
+    border-radius: 0.25rem;
+    line-height: 4rem;
+    text-indent: 1rem;
+    width: 100%;
+    border: 0.75px solid var(--Kolibri-Light-Monochrome---kb-color-plachold, #A0A3BD);
+    font-family: var(--Typescale-Fontfamily-heading, Saira);
+    font-size: var(--Typescale-Fontsize-6, 1.25rem);
+    font-weight: 300;
+    letter-spacing: 0.1rem;
+}
+.weight-slider {
+    align-self: flex-end;
+    margin-bottom: 1.25rem;
+}
 .weight-slider input[type="range"] { }
