--- a/docs/font/typography-template.css
+++ b/docs/font/typography-template.css
@@ -1,102 +1,118 @@
+
+@import "../css/kolibri-base.css";
+
 body {
-    --slider-fill: 25%; font-family: var(--Typescale-Fontfamily-heading, Saira);
+    --slider-fill: 25%;
+    font-family:        var(--Typescale-Fontfamily-heading, Saira);
 
     & h1 {
-        margin: 0px;
-        color: var(--Kolibri-Light-Monochrome---kb-color-black, #14141B);
-        font-size: var(--Typescale-Fontsize-1, 6rem);
-        font-weight: 300;
-        letter-spacing: -1px;
+        margin:             0px;
+        color:              var(--Kolibri-Light-Monochrome---kb-color-black, #14141B);
+        font-size:          var(--Typescale-Fontsize-1, 6rem);
+        font-weight:        300;
+        letter-spacing:     -1px;
     }
 
     & h3 {
-        margin: 0px;
-        color: var(--Kolibri-Light-Monochrome---kb-color-bg-dark, #262338);
-        font-size: var(--Typescale-Lineheight-3, 2.8rem);
-        font-weight: 400;
-        line-height: var(--Typescale-Lineheight-3, 3.0rem);
-        letter-spacing: -0.5px;
+        margin:             0px;
+        color:              var(--Kolibri-Light-Monochrome---kb-color-bg-dark, #262338);
+        font-size:          var(--Typescale-Lineheight-3, 2rem);
+        font-weight:        400;
+        line-height:        var(--Typescale-Lineheight-3, 2.5rem);
+        letter-spacing:     -0.5px;
     }
+
     & h5 {
-        margin: 0px;
-        color: var(--Kolibri-Light-Monochrome---kb-color-plachold, #A0A3BD);
-        font-size: var(--Typescale-Lineheight-5, 1.1rem);
-        font-weight: 500;
-        line-height: var(--Typescale-Lineheight-5, 1.1rem);
-        letter-spacing: 0.15px;
+        margin:             0px;
+        color:              var(--Kolibri-Light-Monochrome---kb-color-plachold, #A0A3BD);
+        font-size:          var(--Typescale-Lineheight-5, 1.1rem);
+        font-weight:        500;
+        line-height:        var(--Typescale-Lineheight-5, 1.4rem);
+        letter-spacing:     0.15px;
     }
+
     & a {
-        color: rgb(0, 115, 230);
+        color:              rgb(0, 115, 230);
     }
+
     & p {
-        color: var(--Kolibri-Light-Monochrome---kb-color-body, #4E4B66);
-        font-size: var(--Typescale-Fontsize-1, 1.6rem);
-        font-weight: 400;
-        line-height: var(--Typescale-Lineheight-1, 2.4rem);
-        letter-spacing: 0.75px;
+        color:              var(--Kolibri-Light-Monochrome---kb-color-body, #4E4B66);
+        font-size:          var(--Typescale-Fontsize-1, 1.6rem);
+        font-weight:        400;
+        line-height:        var(--Typescale-Lineheight-1, 2.4rem);
+        letter-spacing:     0.75px;
     }
+
     & label {
-        color: var(--Kolibri-Light-Monochrome---kb-color-bg-dark, #262338);
-        font-family: var(--Typescale-Fontfamily-heading, Saira);
-        font-size: var(--Typescale-Fontsize-7, 1rem);
-        font-weight: 500;
-        line-height: var(--Typescale-Lineheight-7, 1.25rem);
-        letter-spacing: 0.05rem;
+        color:              var(--Kolibri-Light-Monochrome---kb-color-bg-dark, #262338);
+        font-family:        var(--Typescale-Fontfamily-heading, Saira);
+        font-size:          var(--Typescale-Fontsize-7, 1rem);
+        font-weight:        500;
+        line-height:        var(--Typescale-Lineheight-7, 1.25rem);
+        letter-spacing:     0.05rem;
     }
+
     & input[type="range"] {
-        appearance: none;
-        width: 18rem;
-        height: 0.8rem;
-        border-radius: 50%;
-        outline: none;
-        position: relative;
+        appearance:         none;
+        width:              18rem;
+        height:             0.8rem;
+        border-radius:      50%;
+        outline:            none;
+        position:           relative;
     }
+
     & input[type="range"]::-webkit-slider-runnable-track {
-        border-radius: 1rem;
-        height: 0.5rem;
-        background: linear-gradient(to right, #6000FF var(--slider-fill), #EBECFE var(--slider-fill));
+        border-radius:      1rem;
+        height:             0.5rem;
+        background:         linear-gradient(to right, #6000FF var(--slider-fill), #EBECFE var(--slider-fill));
     }
+
     & input[type="range"]::-webkit-slider-thumb {
-        appearance: none;
-        margin-bottom: 0.8rem;
-        width: 1.5rem;
-        height: 1.5rem;
-        position: relative;
-        top: calc(-0.5rem);
-        background: rgb(96, 0, 255);
-        border-radius: 50%;
-        cursor: pointer;
-        border: 4px solid rgb(255, 255, 255);
-        transition: transform 0.3s ease-in-out;
-        box-shadow: rgba(134, 62, 255, 0.3) 0px 0px 16px, rgba(96, 0, 255, 0.4) 0px 0px 32px;
-        animation: 1.5s ease-in-out 0s infinite normal none running pulseGlow;
+        appearance:         none;
+        margin-bottom:      0.8rem;
+        width:              1.5rem;
+        height:             1.5rem;
+        position:           relative;
+        top:                calc(-0.5rem);
+        background:         rgb(96, 0, 255);
+        border-radius:      50%;
+        cursor:             pointer;
+        border:             4px solid rgb(255, 255, 255);
+        transition:         transform 0.3s ease-in-out;
+        box-shadow:         rgba(134, 62, 255, 0.3) 0px 0px 16px, rgba(96, 0, 255, 0.4) 0px 0px 32px;
+        animation:          1.5s ease-in-out 0s infinite normal none running pulseGlow;
     }
+
     & input[type="range"]:hover::-webkit-slider-thumb {
-        transform: scale(1.2);
-        box-shadow: rgba(134, 62, 255, 0.4) 0px 0px 16px, rgba(96, 0, 255, 0.4) 0px 0px 32px; }
+        transform:          scale(1.2);
+        box-shadow:         rgba(134, 62, 255, 0.4) 0px 0px 16px, rgba(96, 0, 255, 0.4) 0px 0px 32px; }
 }
+
 header {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 5rem;
-    background: var(--Kolibri-Light-Monochrome---kb-color-bg-light, #F7F7FC);
-    gap: 2.5rem;
-    & .header-logo { max-height: 94px; }
+    display:                flex;
+    flex-direction:         row;
+    align-items:            center;
+    padding:                2.5rem 6rem;
+    background:             var(--Kolibri-Light-Monochrome---kb-color-bg-light, #F7F7FC);
+    gap:                    2rem;
+
+    & .header-logo {
+    max-height:             94px; }
+
     & .header-title {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
+    display:                flex;
+    flex-direction:         column;
+    justify-content:        space-around;
     }
 }
 main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 4.5rem 5rem;
-    margin: 0px auto;
-    gap: 6.25rem;
+    display:            flex;
+    flex-direction:     column;
+    justify-content:    center;
+    align-items:        center;
+    padding:            4.5rem 5rem;
+    margin:             0px auto;
+    gap:                6.25rem;
 }
 section {
     display: flex;
@@ -111,7 +127,7 @@ section {
 .intro {
     background: var(--Kolibri-Light-Monochrome---kb-color-bg-light, #F7F7FC);
     border-radius: 12px;
-    padding: 10rem 6.25rem;
+    padding: 8rem 6.25rem;
 }
 .intro-name h3 {
     color: var(--Kolibri-Light-Monochrome---kb-color-label, #6E7191);
@@ -149,3 +165,121 @@ section {
     margin-bottom: 1.25rem;
 }
 .weight-slider input[type="range"] { }
+
+/* Font styles */
+.font-weight-100 {
+    font-weight: 100;
+}
+
+.font-weight-100-italic {
+    font-weight: 100;
+    font-style: italic;
+}
+
+.font-weight-200 {
+    font-weight: 200;
+}
+
+.font-weight-200-italic {
+    font-weight: 200;
+    font-style: italic;
+}
+
+.font-weight-400 {
+    font-weight: 400;
+}
+
+.font-weight-400-italic {
+    font-weight: 400;
+    font-style: italic;
+}
+
+.font-weight-700 {
+    font-weight: 700;
+}
+
+.font-weight-700-italic {
+    font-weight: 700;
+    font-style: italic;
+}
+
+.font-weight-800 {
+    font-weight: 800;
+}
+
+.font-weight-800-italic {
+    font-weight: 800;
+    font-style: italic;
+}
+
+.radioBtnGroup {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+}
+
+
+.radioBtnGroup input[type="radio"] {
+    display: none;
+}
+
+.radioBtnGroup label {
+
+    box-sizing: border-box;
+    border-radius: 0.25rem;
+    line-height: 4rem;
+    width: 4rem;
+    background-color: var(--Kolibri-Light-Monochrome---kb-color-bg-light, #ffffff);
+    border: 0.75px solid var(--Kolibri-Light-Monochrome---kb-color-plachold, #A0A3BD);
+    font-family: var(--Typescale-Fontfamily-heading, Saira);
+    font-size: var(--Typescale-Fontsize-6, 1.25rem);
+    font-weight: 300;
+    letter-spacing: 0.1rem;
+
+    display: inline-block;
+    text-align: center;
+    padding: 0 1rem;
+    cursor: pointer; /* Indicate interactivity */
+}
+
+.radioBtnGroup input[type="radio"]:checked + label {
+    background: var(--Kolibri-Light-Monochrome---kb-color-bg-light, #EFF0F6);
+    color: var(--Kolibri-color-primary-light, #6000FF);
+    font-weight: 500;
+    border: 1px solid var(--Kolibri-color-primary-light, #6000FF);
+}
+
+.radioBtnGroup input[type="radio"]:focus + label:hover {
+    background: var(--Kolibri-Light-Monochrome---kb-color-bg-light, #F7F7FC);
+    color: var(--Kolibri-color-primary-light, #6000FF);
+    border: 0.75px solid var(--Kolibri-Light-Monochrome---kb-color-plachold, #A0A3BD);
+    scale: 1.1;
+}
+
+/* Focused state for keyboard interaction */
+.radioBtnGroup label:focus {
+    outline: none;
+    background: var(--Kolibri-Light-Monochrome---kb-color-bg-light, #F7F7FC);
+    color: var(--kolibri-color-primary-light, #6000FF);
+    border: 0.75px solid var(--Kolibri-Light-Monochrome---kb-color-plachold, #A0A3BD);
+    scale: 1.1; /* Optional, gives a zoom effect */
+}
+
+.radioBtnValue {
+    width: 16rem;
+    box-sizing: border-box;
+    border-radius: 2rem;
+    border: 1px solid var(--Kolibri-Light-Primary---kb-primary-accent, #6000FF);
+    background: #FFF;
+
+    color: var(--Kolibri-Light-Monochrome---kb-color-black, #14141B);
+    font-feature-settings: 'liga' off, 'clig' off;
+    font-family: Saira;
+    font-size: 10.75rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 10.75rem; /* 100% */
+    letter-spacing: 0.125rem;
+
+}
