--- a/docs/css/kolibri-fonts.css
+++ b/docs/css/kolibri-fonts.css
@@ -13,33 +13,41 @@ one for code examples
 
 :root {
 
-    /* --- typography --- */
-    --kb-font-family-default:       system-ui;
-    --kb-font-family-stylish:       "Saira";          /* no sensible fallback */
-    --kb-font-family-running-text:  "Saira";          /* fallback depends on the context */
-    --kb-font-family-mono:          "JetBrains Mono", monotype;
+    /* --- font metric defaults --- */
+    --font-base-unit:  1rem;    /* a flexible unit that changes with user preferences - can even be responsive */
+    --font-base-scale: 1.62;    /* default scale is golden ratio, to be overridden */
 
-    /* --- font-sizes --- */
-    --font-size-h1:         6.0rem;
-    --font-size-h2:         3.75rem;
-    --font-size-h3:         3.0rem;
-    --font-size-h4:         2.0rem;
-    --font-size-h5:         1.5rem;
-    --font-size-h6:         1.0rem;
+    /* --- semantic font family defaults --- */
+    --font-family:              "Saira";
+    --font-family-stylish:      "Saira";
+    --font-family-mono:         "JetBrains Mono", monotype;
 
-    --font-size-textL:      1.25rem;
-    --font-size-textM:      1.0rem;
-    --font-size-textS:      0.875rem;
-    --font-size-textXS:     0.75rem;
-
-    --font-size-linkL:      1.25rem;
-    --font-size-linkM:      1.125rem;
-    --font-size-linkS:      1.0rem;
-    --font-size-linkXS:     0.875rem;
-
-    --font-size-caption:    0.875rem;
-    --font-size-overline:   0.625rem;
-
-
+    /* --- specialized font sizes - add as we need them but keep them relative --- */
+    --font-size-caption:        calc(0.8 * var(--font-base-unit));
 }
+
+/* --- relative font sizes --- */
+
+h1, h2, h3, h4, h5, .font-size-relative,
+.font-size-h1, .font-size-h2, .font-size-h3, .font-size-h4, .font-size-h5 {
+    --font-size-factor: 1;      /* default, to be overridden */
+    font-size: clamp( .8rem, var(--font-size-factor) * var(--font-base-unit), 100vb);
+}
+h1, .font-size-h1 {--font-size-factor: calc( pow(var(--font-base-scale), 3));}
+h2, .font-size-h2 {--font-size-factor: calc( pow(var(--font-base-scale), 2));}
+h3, .font-size-h3 {--font-size-factor: calc( pow(var(--font-base-scale), 1));}
+h4, .font-size-h4 {--font-size-factor: calc( pow(var(--font-base-scale), 0));}
+h5, .font-size-h5 {--font-size-factor: calc( pow(var(--font-base-scale),-1));}
+
+.document    {                                  /* a class for web documents that are intended to be read */
+    --font-base-scale:          1.9;           /* documents build the visual hierarchy by the golden ration */
+    --font-family:              "Saira";
+}
+
+.application {                                  /* a class for web applications that are intended to be worked with */
+    --font-base-scale:          1.2;            /* applications build the visual hierarchy by 20% compounded */
+    --font-family:              system-ui;
+}
+
+
 
