--- a/docs/css/kolibri-base.css
+++ b/docs/css/kolibri-base.css
@@ -2,6 +2,7 @@
 
 @import "./kolibri-fonts.css";
 @import "./kolibri-colors.css";
+@import "./kolibri-projector-simple.css";
 
 
 :root {
@@ -171,6 +172,8 @@ label + span > input:invalid + span.invalidation_marker {
         animation-duration: 0.01ms ;
   }
 }
+
+/*noinspection CssUnknownProperty*/
 :root {
     /*
         Needed to animate e.g. from height:0 to height:auto.
@@ -221,66 +224,3 @@ a.skip-link:not(:focus):not(:active) {
 }
 
 /* --- end of utility classes --- */
-
-
-/* --- experimental popover and anchor positioning --- */
-
-[popover] {             /* style that pops for all elements with popover attribute */
-      flex-direction:     column;
-      gap:                .5em;
-      background-image:   linear-gradient(170deg, #4c4cc6 45%, darkblue 50%, darkblue 80%, #4c4cc6);
-      box-shadow:         .2em .2em  1em 0 lightslategray,
-                          0    0    .5em 0 white           inset;
-      border-width:       0;
-      border-radius:      .5em;
-      color:              white;
-      font-family:        system-ui;
-      padding:            1em;
-  }
-
-  :popover-open {
-      animation-name:             appear;
-      animation-duration:         .5s;
-      animation-timing-function:  ease-in-out;
-      animation-fill-mode:        forwards;
-  }
-
-  /* For the moment, don't do this as it makes the UI appear flickering when*/
-  /* the popover closes. Sadly, there seems to be no way to transition back on close that works on all browsers.*/
-  /* For chrome and Safari (not FF yet), we could use a view transition. */
-  /*:popover-open::backdrop {*/
-  /*    background-color:           color-mix(in hsl, white, transparent 70%);*/
-  /*    transition:                 background-color 1s linear;*/
-  /*    @starting-style {*/
-  /*        background-color:       transparent;*/
-  /*    }*/
-  /*}*/
-
-  .popover_anchor {
-      /* anchor-name will be set on the element */
-      position:           relative;
-      display:            inline-flex;  /* for FF and Safari or it does not always work */
-  }
-  .popover_tooltip {
-      /* position-anchor will be set on the element */
-      position:           absolute;     /* override the popover-hidden default */
-      inset:              unset;
-      top:                anchor(top);  /* dirty trick for FF and Safari (anchor(bottom) does not work) */
-      left:               anchor(left);
-      translate:          0 1.2lh;      /* dirty trick for FF and Safari */
-
-      transform-origin:   top center; /* makes expandY a drop-down */
-  }
-.popover_tooltip:popover-open {
-      display:                    flex;              /* override */
-      animation-name:             appear, expandY;
-  }
-
-  @keyframes appear {
-      from { opacity: 0; }
-      to   { opacity: 1; }
-  }
-  @keyframes expandY {
-      from {  transform: scaleY(0); }
-      to   {  transform: scaleY(1); }
-  }
